unpackaged/main/default/objects/pse__Work_Queue__c/pse__Work_Queue__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__WorkQueueHelp</customHelpPage>
    <description>This object has been deprecated and will be removed in a future release. Use Setup/Schedule Jobs to manage scheduled jobs and Setup/Apex Jobs to manage batch jobs.</description>
    <label>DEPRECATED: Work Queue</label>
    <nameField>
        <displayFormat>WQ-{0}</displayFormat>
        <label>Work Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEPRECATED: Work Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>