unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__ApexClass__c.field-meta.xml
<CustomField>
    <fullName>pse__ApexClass__c</fullName>
    <description>Name of the apex class that is to be managed (Scheduled or Batch)</description>
    <label>ApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>