unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_ID__c</fullName>
    <label>Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>