unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Cron_Day_Parameter__c.field-meta.xml
<CustomField>
    <fullName>pse__Cron_Day_Parameter__c</fullName>
    <description>Stores specific information about which days on which to run the job.</description>
    <inlineHelpText>Stores specific information about which days on which to run the job.</inlineHelpText>
    <label>Cron Day Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>