unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Cron_Schedule__c.field-meta.xml
<CustomField>
    <fullName>pse__Cron_Schedule__c</fullName>
    <description>Holds the Cron Scheduled Pattern for this task.  Blank if to be run only once.</description>
    <label>Cron Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>