unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Next_Run__c.field-meta.xml
<CustomField>
    <fullName>pse__Next_Run__c</fullName>
    <label>Next Run</label>
    <type>DateTime</type>
</CustomField>