unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>