unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Status_Message__c.field-meta.xml
<CustomField>
    <fullName>pse__Status_Message__c</fullName>
    <label>Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>