unpackaged/main/default/objects/pse__Work_Queue__c/fields/pse__Time_Zone_Offset__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Zone_Offset__c</fullName>
    <description>Stores the offset from GMT for the user who is creating this schedule.
Format is sHHMM
Where s= + or - depending on if the time zone is ahead or behind gmt
  and HH is the number of hours to offset
  and MM is the number of minutes to offset (used for partial hour time zones)</description>
    <label>Time Zone Offset</label>
    <length>5</length>
    <type>Text</type>
</CustomField>