unpackaged/main/default/objects/pse__Work_Queue__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__ApexClass__c</columns>
    <columns>pse__Last_Run__c</columns>
    <columns>pse__Next_Run__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Status_Message__c</columns>
    <columns>pse__Constructor_Data__c</columns>
    <columns>pse__Cron_Schedule__c</columns>
    <columns>pse__Time_Zone_Offset__c</columns>
    <columns>pse__Batch_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>